--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
 
 <resources>
   <string name="app_name">Picasa-Gallery-Android</string>
+  <string name="preference_file_key">picasa_gallery_prefs</string>
+  <string name="saved_person_name">saved_person_name</string>
+
 </resources>
